Fix styling for resume header on mobile

--- a/styles/Resume.module.scss
+++ b/styles/Resume.module.scss
@@ -13,6 +13,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media all and (max-width: 500px) {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+  }
 }
 
 .resumeSection {
